README: aligned with reality - 9 hooks verified
Actual state:
  9 overlay hooks (FreedomChat, CPS, Branding, 4x Zero, purpurConfig, Rideables)
  31 owned modules (perf, security, qol, async, entity, world, config, events)
  Purpur: 18 events + PurpurConfig (compiled, hooks pending)
  Custom events: classes created, overlay patterns need update for Paper 26.1.2
  Anticheat: CPS, reach, combat log, exploit, auto-ban
  Zero Features: 4 working (Stats, Adv, Light, Void) + 4 config ready

Removed from README: 16 hooks claim (was 9)