@@ -1,31 +1,156 @@
-# Advanced Slime Paper (ASWM) [![Build Status](https://ci.infernalsuite.com/app/rest/builds/buildType:(id:AdvancedSlimePaper_Build)/statusIcon)](https://ci.infernalsuite.com/viewType.html?buildTypeId=AdvancedSlimePaper_Build&guest=1)
+# BTC-CORE
 
-[<img src="https://assets-global.website-files.com/6257adef93867e50d84d30e2/636e0b5061df29d55a92d945_full_logo_blurple_RGB.svg" alt="" height="55" />](https://discord.gg/YevvsMa)
+![Version](https://img.shields.io/badge/version-26.1.2-blue)
+![Java](https://img.shields.io/badge/java-25-orange)
+![Base](https://img.shields.io/badge/base-AdvancedSlimePaper%2026.1.2-purple)
+![Folia](https://img.shields.io/badge/folia-compatible-green)
+![Hooks](https://img.shields.io/badge/hooks-9-success)
 
-Advanced Slime Paper is a fork of Paper implementing the Slime Region Format developed by Hypixel. Originally a plugin, this project has been converted to a
-fork to maximize our ability to provide fixes and performance improvements.
-Its goal is to provide server administrators with an easy-to-use tool to load worlds faster and save space.
+Fork serveur Minecraft optimise pour **BornToCraft Studio**, base sur AdvancedSlimePaper 26.1.2 (Paper + SlimeWorld + Folia/Moonrise).
 
-## Releases
+## Build
 
-ASP builds can be found [here](https://infernalsuite.com/download/asp). Older
-builds can be found in the [Discord](https://discord.gg/YevvsMa) under the #aspaper-builds channel.
+```bash
+git clone https://github.com/InfernalSuite/AdvancedSlimePaper.git
+cd AdvancedSlimePaper && git checkout dev/26.1.1
+# Copier les assets BTC-CORE (modules, scripts, config, API)
+./gradlew applyAllPatches --offline
+python scripts/apply-btccore-patches.py    # ATTENTION: python, pas python3 !
+./gradlew :aspaper-server:createPaperclipJar --offline
+```
 
-## Wiki
-For API and usage info check out the docs at https://infernalsuite.com/
+Jar: `aspaper-server/build/libs/aspaper-paperclip-26.1.2.build.19-alpha.jar`
 
-## Javadocs
-The Javadocs can be found [here](https://docs.infernalsuite.com/).
+## Deploiement
 
-## Credits
+```bash
+java -Xms4G -Xmx6G -XX:+UseZGC -XX:+AlwaysPreTouch -jar aspaper-paperclip-26.1.2.build.19-alpha.jar nogui
+```
 
-Thanks to:
-* All the contributors that actively maintain ASWM and added features to SWM.
-* [Paul19988](https://github.com/Paul19988) - ASWM Creator.
-* [ComputerNerd100](https://github.com/ComputerNerd100) - Large Contributor & Maintainer.
-* [b0ykoe](https://github.com/b0ykoe) - Provider of build services & repositories.
-* [Owen1212055](https://github.com/Owen1212055) - Large Contributor & Maintainer.
-* [Gerolmed](https://github.com/Gerolmed) - Contributor & Maintainer.
-* [Grinderwolf](https://github.com/Grinderwolf) - The original creator.
-* [Glare](https://glaremasters.me) - Providing the original Maven repository.
-* [Minikloon](https://twitter.com/Minikloon) and all the [Hypixel](https://twitter.com/HypixelNetwork) team for developing the SRF.
+## Features
+
+### Base (AdvancedSlimePaper 26.1.2)
+- Paper 26.1.2 + Folia (regionized multithreading) — SlimeWorld + vanilla worlds
+- SlimeWorld Manager (SRF format, database backends: MySQL/Redis/Mongo/File)
+- Moonrise chunk system (priority-based loading, async chunk tasks)
+- Alternate Current redstone (high-performance, Moonrise)
+- SIMD vectorization (Pufferfish/Canvas)
+
+### 9 Hooks Overlay (verifies)
+| # | Hook | Fichier | Effet |
+|---|------|---------|-------|
+| 1 | FreedomChat | PlayerList | Chat non-signe |
+| 2 | CPS Limiting | ServerGamePacketListenerImpl | Anti-click-spam |
+| 3 | Branding | ServerBuildInfoImpl | "BTC Core" dans /version |
+| 4 | Zero: Stats | ServerStatsCounter | Desactive les stats |
+| 5 | Zero: Advancements | PlayerAdvancements | Desactive les adv |
+| 6 | Zero: Light Engine | ThreadedLevelLightEngine | Skip light updates |
+| 7 | Zero: Void Generator | ServerChunkCache | Generation chunks vides |
+| 8 | purpurConfig | Level | Config Purpur globale |
+| 9 | Rideables foundation | Mob, ServerLevel | isControllable, onSpacebar |
+
+### 31 Modules Owned
+| Module | Features |
+|--------|----------|
+| `performance/` | Hopper/collision/redstone throttle, scoreboard opt, NBT cache, chunk prefetch, batched inventory |
+| `security/` | CPS limiting, combat log, exploit logger, Sentinel DB, async packet validator, reach validation |
+| `qol/` | Maintenance mode, join queue, teleport warmup, vanish, player data backup |
+| `async/` | Async pathfinding, async entity tracker, async mob spawning |
+| `entity/` | Cross-world entity transfer, collision throttle |
+| `world/` | Void chunk generator, BlockValueCache (cache valeurs blocs pour calcul niveau ile) |
+| `config/` | BTCCoreConfig, SlimeWorldConfig, AnticheatConfig, PurpurConfig |
+| `event/` | PreDamageCalculationEvent, EntityTargetPlayerEvent (classes prets, hooks a finaliser) |
+
+### Zero Features (tous les mondes quand actives)
+| Feature | Config key | Statut |
+|---------|-----------|--------|
+| Stats | `zero-features.stats` | ✅ |
+| Advancements | `zero-features.advancements` | ✅ |
+| Light Engine | `zero-features.light-engine` | ✅ |
+| Void Generator | `zero-features.force-void-generator` | ✅ |
+| Collisions | `zero-features.collisions` | Config ready |
+| Cramming | `zero-features.cramming` | Config ready |
+| Block Updates | `zero-features.block-updates` | Config ready |
+| Sleep Tick | `zero-features.sleep-tick` | Config ready |
+
+### Anticheat
+```yaml
+# anticheat.yml
+cps-limit: { enabled: false, max-cps: 20, action-on-violation: KICK }
+reach: { enabled: false, max-survival-reach: 4.5 }
+combat: { combat-log: { enabled: true, kill-on-logout: true } }
+exploit: { block-interact-distance: 6.0, invalid-packets: true }
+auto-ban: { enabled: true, ban-command: "ban {player} {reason}" }
+```
+
+### Purpur Integration
+- 18 event classes compilees (RidableMoveEvent, RidableSpacebarEvent, etc.)
+- PurpurConfig.java (97 lignes) — tous les keys config
+- purpur.yml — configuration
+- Controleurs WASD : prets, necessitent injection AT pour activation
+
+## Configuration
+
+### btccore.yml (extrait)
+```yaml
+performance:
+  hopper: { throttling: true }
+  collision: { throttle: true }
+security:
+  freedom-chat: { enabled: true, rewrite-chat: true }
+  cps-limit: { enabled: false, max-cps: 20 }
+zero-features:
+  light-engine: false      # Activer pour skip light updates
+  force-void-generator: false  # Activer pour generation vide
+  stats: false
+  advancements: false
+```
+
+### purpur.yml (extrait)
+```yaml
+settings:
+  minecart: { controllable: true, max-speed: 0.4 }
+  elytra: { kinetic-damage: true }
+  spawners: { silk-touch: true }
+  barrel: { rows: 3 }
+```
+
+## API
+```java
+// World management
+BTCCoreAPI.instance().createWorld(loader, worldName, properties);
+
+// Block value cache (island leveling)
+double val = BlockValueCache.getChunkValue(level, chunkX, chunkZ);
+BlockValueCache.scanAndCacheChunk(chunk);
+```
+
+## Structure
+```
+btccore-new/
+├── aspaper-server/
+│   ├── src/main/java/dev/btc/core/   # 31 modules owned
+│   ├── src/main/java/org/purpurmc/   # 18 events + PurpurConfig
+│   ├── src/main/resources/           # btccore.yml, purpur.yml, anticheat.yml
+│   ├── minecraft-patches/            # Patches ASP
+│   └── paper-patches/                # Patches Paper
+├── api/                              # BTCCoreAPI + BTCCoreVisualAPI
+├── plugin/                           # Plugin Bukkit
+├── loaders/                          # MySQL, Redis, Mongo, File, API
+├── scripts/
+│   └── apply-btccore-patches.py      # 9 hooks overlay
+├── repo/                             # Publication Maven + Javadoc
+└── buildSrc/
+```
+
+## Publication Maven
+```gradle
+repositories { maven("https://borntocraftstudio.net/repo/") }
+dependencies { compileOnly("dev.btc.core:api:26.1.2.build.19-alpha") }
+```
+
+## Tags Git
+`btccore-clean-build` → `btccore-9hooks` (26 tags)
+
+## Licence
+GPL v3.0 (heritee d'AdvancedSlimePaper)
